Fix alignment in a cleaner way
Enact-DCO-1.0-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/Switch/Switch.module.less
+++ b/Switch/Switch.module.less
@@ -25,7 +25,6 @@
 	}
 
 	.icon {
-		position: absolute;
 		visibility: visible;
 		left: 0;
 		width: @sand-switch-height;
@@ -33,6 +32,7 @@
 		font-size: (@sand-switch-height * 3);
 		line-height: inherit;
 		margin: 0;
+		vertical-align: top;
 	}
 
 	&.selected {
